--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "query-string": "^6.3.0",
     "react": "^16.8.4",
     "react-app-polyfill": "^0.2.2",
+    "react-content-loader": "^4.2.1",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
