--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "JS Testing",
-  "name": "React Jest Enzyme Test",
+  "short_name": "EB",
+  "name": "E-Bazaar",
   "icons": [
     {
-      "src": "",
+      "src": "./ebazaar.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
